--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
-        }
-        h1 {
-            color: #333;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="specific-styles.css"> 
 </head>
 <body>
     <h1>Hi, I am Bhasskar</h1>
+    <p>Contact me at: bhasskar.k8@gmail.com</p>
+    <p>Find my Resume below:</p>
+    <iframe src="Resume/Bhasskar-FSE-3.pdf" width="800" height="600" frameborder="0" scrolling="auto"></iframe>
+    <img src="images/self.jpg" alt="Bhasskar's Photo" class="profile-img">
+    <p>Welcome to my personal website! I'm Bhasskar, a self-motivated software engineer passionate about creating scalable products and solving complex problems.</p>
+    <p>I have experience in full-stack development, DevOps, cloud services, and machine learning. Reach out to me for collaboration or opportunities!</p>
+    <p>Some of my hobbies include traveling, surfing, snowboarding, trekking, and playing football and cricket. I'm also a home barista and enjoy playing the violin in my free time.</p>
 </body>
 </html>
