--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Hi, I am Bhasskar</h1>
             <p>Welcome to my website! I'm a self-motivated software engineer passionate about creating scalable products and solving complex problems.</p>
             <p>Some of my hobbies include traveling, surfing, snowboarding, trekking, and playing football and cricket.</p>
-            <a href="#resume" class="resume-link">Expand Resume</a>
+            <a href="#resume" class="resume-link">Check My Resume</a>
         </div>
     </div>
 
