--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="dhead" class="container">
         <div class="row">
             <div id="dpic">
-                <img src="assets/cdpic.jpeg" class="ppic" />
+                <img src="assets/self_dpic.jpeg" class="ppic" />
             </div>
             <div id="ddesc">
                 <h1>K Bhasskar</h1>
