--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="ctitle">Tech Journals</div>
             <ul class="nodot">
-                <h1>Coming soon</h1>
+                <div>Updating.....</div>
             </ul>
         </div>
     </div>
